# NvStrapsReBar

./: .gitignore  README.md
ReBarDxe/: EfiVariable.c  NvStrapsConfig.c
ReBarDxe/include/: DeviceRegistry.h  EfiVariable.h  LinuxTypes.h  LocalAppConfig.h  NvStrapsConfig.h
ReBarState/: CMakeLists.txt  ConfigManagerError.ixx  ConfigurationWizard.ixx  DeviceList.ixx  NvStrapsConfig.hh  NvStrapsConfig.ixx  PciNames.cc  PciNames.h  ReBarState.cc  TextWizardMenu.ixx  TextWizardPage.ixx  WinApiError.ixx
ReBarState/cmake/: CxxStdModule.cmake
docs/: linux-build.vi.md
